--- a/style.css
+++ b/style.css
@@ -7,5 +7,11 @@ h1 {
   color: darkolivegreen;
 }
 .main-header {
-  color: lightcoral;
+  text-align: center;
+  margin-top: 30px;
+  border: 3px solid palevioletred;
+  padding: 50px 25px;
+  background-color: tomato;
+  height: 30vh;
+  width: 50vw;
 }
